# statesim

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
config/: actuated_pendulum.json  cartpole.json  inverted_pendulum.json  linear.json  msd.json  pendulum.json
scripts/: compare_matlab_simulation.ipynb  create_train_split.py  input_sequence.ipynb  linearization.ipynb  run_cartpole_datagen.py  run_datagen.py  run_datagen_linear.py  run_datagen_nonlinear.py  symbolic_linearization.ipynb
scripts/matlab/: Gamma.asv  Gamma.m  basic_klmn.m  coupled_msd_4.slx  coupled_msd_4.slxc  delta_tilde.m  dh_analysis.m  dh_matrix.m  hybrid.slx  hybrid.slxc  init_klmn.m  non_lin.slx  non_lin.slxc  pars.mat  patrol_linearization.m  rc.m  static_ozf.asv  static_ozf.m  utils.asv  utils.m
scripts/notebooks/: compare_matlab_simulation.ipynb  exponential_stability.ipynb  feasibility_test.ipynb  generate_data.ipynb  input_sequence.ipynb  l2_stability.ipynb  linearization.ipynb  normalization.ipynb  profile.ipynb  symbolic_linearization.ipynb  system_analysis.ipynb
src/hybridstablemodel/: simulator.py
src/statesim/: configuration.py  io.py  noise.py  simulator.py  utils.py
tests/: simulation_test.py  simulation_tests.py  smoke_test.py  smoke_tests.py  unit_test.py  utils.py
tests/data/: 2023_03_09-01_25_33_cartpole_linear_continous.csv  2023_03_09-01_25_33_cartpole_linear_discrete.csv  2023_03_09-01_25_33_cartpole_nonlinear_continuous.csv  2023_03_09-07_56_08_cartpole_linear_continous.csv  2023_03_09-07_56_08_cartpole_linear_discrete.csv  (+1 more)
(+82 files in other folders)
