[tool.poetry]
name = "statesim"
version = "0.1.0"
description = "Simulator for state space models, to generate data from differential equations."
authors = ["Daniel Frank <daniel.frank@ipvs.uni-stuttgart.de>"]
packages = [{include = "statesim", from = "src"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 <3.12"
sympy = "^1.11.1"
numpy = "^1.24.2"
scipy = {version = "^1.10.1" }
matplotlib = "^3.7.0"
pandas = "^1.5.3"
pydantic = "^1.10.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
pytest = "^7.2.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true

[tool.black]
line-length = 79
skip-string-normalization = 1
